# upwork

C++/: MSocket.h
C++/Log/: Log.cpp  Log.h  logframe.cpp  logframe.h
C++/Log/CVS/: Entries  Repository
C++/Mgmt/: ItemPool.h  frmmgmt.cpp
C++/Mgmt/CVS/: Repository
C++/newcode/mintdev/Comm/: CMakeLists.txt  Main.cpp
C++/newcode/mintdev/Comm/Functions/: CCmdScript.cpp  CCmdScript.h  Config.cpp  Config.h  FixLenMem.cpp  FixLenMem.h  Perf.cpp  Perf.h  PkgBuff.cpp  PkgBuff.h  encrypt.cpp  encrypt.h  intmap.cpp  intmap.h  strfuncs.cpp  strfuncs.h  synchronal.cpp  synchronal.h
C++/newcode/mintdev/Comm/Log/: Log.cpp  Log.h  LogFrame.cpp  LogFrame.h  a.out  test.cpp
C++/newcode/mintdev/Comm/Log/logs/: basic1.txt  basic2.txt
C++/newcode/mintdev/Comm/MSocket/: Buffer.cpp  Buffer.h  MSocket.cpp  MSocket_Tcp.cpp
C++/newcode/mintdev/Comm/Security/: md5.cpp
C++/newcode/mintdev/Servers/OrderServ/: CMakeLists.txt
C++/newcode/mintdev/Servers/OrderServ/Mgmt/: ItemPool.cpp  ItemPool.h  itemsDef.cpp  itemsDef.h  itemsSRst.cpp  itemsSRst.h
C++/newcode/mintdev/Servers/OrderServ/include/: ClientPortDaemon.h  OrderConfig.h  OrderServ.h  TradeEngine.h
C++/newcode/mintdev/Servers/OrderServ/src/: .OrderServ.cpp.swp  ClientPortDaemon.cpp  OrderConfig.cpp  OrderServ.cpp
C++/oldcode/Comm/: Config.cpp  Functions.zip.e
C++/oldcode/Comm/CVS/: Entries  Entries.Extra  Entries.Old  Repository
C++/oldcode/Comm/Crash/: ExceptionAttacher.cpp  ExceptionHandler.cpp  MiniVersion.cpp
C++/oldcode/Comm/DragDrop/: DragDropButton.cpp  DragDropButton.h  DragDropComboBox.cpp  DragDropComboBox.h  DragDropListBox.cpp  DragDropListBox.h  ECMaterialDropText.cpp  ECMaterialDropText.h  ECOleMemDropTarget.cpp  ECOleMemDropTarget.h  dragdroptextbox.cpp  dragdroptextbox.h
C++/oldcode/Comm/Functions/: BandWidthCounter.cpp  BandWidthCounter.h  BrowseForFolder.cpp  CPUIfo.cpp  CPUIfo.h  CommFun.cpp  CommFun.h  Config.cpp  Config.h  ControlPos.cpp  ControlPos.h  DirWatcher.cpp  DirWatcher.h  DlgResizeHelper.cpp  DlgResizeHelper.h  FixLenMem.cpp  FixLenMem.h  GMap.cpp  GMap.h  GTime.cpp  GTime.h  InputBox.cpp  InputBox.cpp.old  InputBox.h  InputBox.h.old  MDVersion.cpp  MDVersion.h  MSplitter.cpp  MSplitter.h  MarketTimer.cpp  MarketTimer.h  MsgBuff.cpp  MsgBuff.h  MultiLog.cpp  MultiLog.h  PkgBuff.cpp  PkgBuff.h  Property.cpp  Property.h  PtrLink.cpp  (+32 more)
C++/oldcode/Comm/Issue/: ISLDQuote.cpp  ISLDQuote.h  ISLDQuoteQsev.cpp  PriceBook.cpp  PriceBook.h  QuoteLst.cpp  QuoteLst.h
C++/oldcode/OrderServ/: Account.cpp  Account.h  AertTab1.sql  CMakeLists.txt  ChildFrm.cpp  ChildFrm.h  Client.cpp  Client.h  ClientPortDaemon.cpp  ClientPortDaemon.h  InfoPort.cpp  InfoPort.h  IssueIfo.cpp  IssueIfo.h  MainFrm.cpp  MainFrm.h  OrdScript.cpp  OrdScript.h  OrderConfig.cpp  OrderConfig.h  OrderDB.cpp  OrderDB.h  OrderRouteCfg.cpp  OrderRouteCfg.h  OrderRouter.cpp  OrderRouter.h  OrderServ.cfg  OrderServ.clw  OrderServ.clw1  OrderServ.cpp  OrderServ.dsp  OrderServ.dsw  OrderServ.h  OrderServ.rc  OrderServ.sln  OrderServ.vcxproj  OrderServ.vcxproj.filters  OrderServDoc.cpp  OrderServDoc.h  OrderServView.cpp  (+15 more)
C++/oldcode/OrderServ/CVS/: Entries  Repository
C++/oldcode/OrderServ/Config/: OrderServ.cfg
C++/oldcode/OrderServ/Mgmt/: ItemPool.cpp  frmmgmt.h  itemsDef.cpp  itemsDef.h  itemsSRst.cpp  itemsSRst.h
C++/oldcode/OrderServ/Mgmt/CVS/: Entries
C++/oldcode/OrderServ/SQLScript/: CreateDealTables.sql  Init.sql  InitDataBase.sql  StoredProc.sql  traccifo.sql  tracctaccess.sql  trtrader.sql
C++/oldcode/OrderServ/SQLScript/CVS/: Entries  Repository
C++/oldcode/OrderServ/res/: OrderServ.rc2
C++/oldcode/OrderServ/res/CVS/: Entries  Entries.Extra  Entries.Extra.Old  Entries.Old  Repository
C++/scripts/: BalanceInfo.sql  EventIfo.sql  GenConfig.sql  ISLDEXE.sql  RSKMaintain.sql  Servers.sql  TraderLog.sql  UserTktIfo.sql  WatchInfo.sql  brfeed.sql  brifo.sql  brpath.sql  dayinitstored.sql  daytrade.sql  itemOredr.sql  itemTrade.sql  lPosition.sql  lTrades.sql  laccount.sql  lorders.sql  ltickets.sql  mAccCtrlEx.sql  mAccCtrlEx_Route.sql  mAccCtrlEx_Symb.sql  mAccount.sql  mAddress.sql  mAdmBranchList.sql  mCustomer.sql  mExchAgree.sql  mLOA.sql  mMsg.sql  mNewAccount.sql  mNewPosition.sql  mNewsInfo.sql  mOptSym.sql  mOrders.sql  mPosition.sql  mSecIfo.sql  mSymbLst.sql  mTrades.sql  (+21 more)
(+92 files in other folders)
